# ENBEL_pp

./: .gitignore  .pre-commit-config.yaml  BUG_FIXES_2025-10-14.md  CASE_CROSSOVER_DLNM_VALIDATION_RESULTS.md  CD4_SHAP_SLIDE_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLIMATE_FEATURE_DECISION.md  COMPREHENSIVE_FEATURE_SPACE_ANALYSIS.md  DAY_1_RESULTS_SUMMARY.md  Dockerfile  EXECUTIVE_SUMMARY_SHAP.md  FEATURE_LEAKAGE_AUDIT.md  FEATURE_LEAKAGE_FIX_2025-10-14.md  FINAL_CORRECTED_RESULTS_SUMMARY.md  GCRO_DATA_STRUCTURE_ANALYSIS.md  GCRO_METADATA.json  GCRO_WAVE_COMPARISON_REVISION.md  HEMATOCRIT_SENSITIVITY_ANALYSIS_RESULTS.md  HYPERPARAMETER_TUNING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MIXED_EFFECTS_DLNM_RESULTS.md  MODEL_REFINEMENT_PLAN.md  MODEL_REFINEMENT_SETUP_SUMMARY.md  MULTI_BIOMARKER_COMPARISON_RESULTS.md  PARSIMONIOUS_CHOLESTEROL_FINAL_RESULTS.md  PATIENT_LEVEL_INTERACTION_VALIDATION.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PHASE_1_PROGRESS_SUMMARY.md  PIPELINE_IMPROVEMENTS_2025-10-14.md  PRESENTATION_SLIDES_ROADMAP.md  PUBLICATION_SLIDES_SUMMARY.md  README.md  README_PIPELINE.md  REVISED_PLAN_USING_EXISTING_IMPUTATION.md  RIGOROUS_METHODOLOGY_FRAMEWORK.md  SHAP_ATTRIBUTION_KEY_FINDINGS.md  SHAP_STATISTICAL_VALIDATION_CROSSREF.md  SLIDE_IMPROVEMENT_PLAN.md  (+75 more)
.claude/: METHODOLOGY_SKILLS.md  MODEL_OPTIMIZATION_SKILLS.md  R_CARTOGRAPHY_SKILLS_SUMMARY.md  SLIDE_MAKING_SKILLS.md
.claude/skills/: PUBLICATION_MAP_STYLING.md  QUICK_REFERENCE_CARD.md  README.md  R_CARTOGRAPHY_FUNDAMENTALS.md  SCIENTIFIC_CARTOGRAPHY_STANDARDS.md  SVG_EXPORT_WORKFLOWS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
01_initial_analysis/optimization/: advanced_climate_health_optimization.py
01_initial_analysis/supervised_ml/: comprehensive_model_exploration.py
03_flexible_discovery/ecological/: multilevel_climate_health_framework.py  quick_cohort_specific_analysis.py
03_flexible_discovery/supervised/: focused_rigorous_analysis.py
03_flexible_discovery/unsupervised/: comprehensive_alternative_analysis.py  robust_alternative_discovery.py
04_rigorous_methodology/final_analysis/: final_comprehensive_analysis.py  rapid_ml_multivariate.py  rigorous_ml_multivariate_analysis.py
04_rigorous_methodology/xai_validation/: advanced_causal_xai_discovery.py  climate_xai_breakthrough_implementation.py  novel_xai_validation_framework.py  practical_xai_evaluation.py  streamlined_causal_xai_discovery.py
R/: case_crossover_dlnm_validation.R  comprehensive_dlnm_validation_pipeline.R  comprehensive_mixed_effects_dlnm.R  comprehensive_units_check_and_reanalysis.R  create_publication_figures_interaction.R  create_publication_maps.R  create_ward_level_maps.R  debug_dlnm.R  deep_dive_within_study_patterns.R  extended_biomarker_analysis.R  hematocrit_sensitivity_analysis.R  hematocrit_units_correction.R  install_packages.R  meta_regression_validation.R  mixed_effects_dlnm.R  multi_biomarker_within_study_analysis.R  parsimonious_cholesterol_analysis.R  patient_level_interaction_analysis.R  publication_quality_figures.R  study_by_study_cholesterol_analysis.R  test_mixed_effects_dlnm.R  working_dlnm_validation.R
R/dlnm_analysis/: create_authentic_dlnm_plots.R  create_cd4_dlnm_simple.R  create_dlnm_final_working.R  create_dlnm_simple_final.R  create_dlnm_svg_compatible.R  create_enbel_dlnm_robust.R  create_high_performance_dlnm.R  create_real_cd4_dlnm_analysis.R  create_real_dlnm_analysis.R  create_working_dlnm_final.R  dlnm_validation_analysis.R
R/dlnm_validation/: dlnm_validation_pipeline.R
analysis_scripts/: comprehensive_dlnm_analysis.R  fixed_dlnm_analysis.R
configs/: default.yaml  development.yaml  model_refinement_config.yaml  production.yaml
docker/: docker-compose.yml  entrypoint.sh
documentation/: CLIMATE_HEALTH_INSIGHTS_REPORT.md  COMPREHENSIVE_SCIENTIFIC_ANALYSIS.md  IMPLEMENTATION_ROADMAP_BREAKTHROUGH_XAI.md  MODEL_USAGE_GUIDE.md  comprehensive_figure_captions.md  explainable_ai_climate_health_literature_review.md
manuscript/: README.md  main.tex  references.bib
presentation_slides_final/: CD4_HEAT_ANALYSIS_SUMMARY.md  IMPUTATION_METHODOLOGY_DOCUMENTATION.md  JOHANNESBURG_MAP_DOCUMENTATION.md  JOHANNESBURG_SHAPEFILE_MAP_DOCUMENTATION.md  SHAP_WATERFALL_DOCUMENTATION.md  analyze_physiological_systems.py  analyze_with_hot_days.py  create_authentic_johannesburg_shapefile_map.py  create_cd4_heat_analysis_final.py  create_detailed_johannesburg_map.py  create_distinct_data_types_map.py  create_enhanced_johannesburg_map.py  create_johannesburg_map_r.R  create_johannesburg_map_with_ward_distribution.R  create_significant_findings_slide.py  create_slide_04_temporal_coverage.py  create_slide_08_shap_analysis.py  create_styled_overview_exact_match.py  create_updated_dataset_overview_slide.py  enbel_dlnm_comprehensive_results.txt  enbel_dlnm_results_summary.txt  examine_temperature_data.py  find_meaningful_climate_effects.py  real_climate_effects_analysis.py  refine_slide_08_shap_publication.py  verify_real_data.py
reanalysis_outputs/: PRESENTATION_OUTPUTS_SUMMARY.md
results/: rapid_rigorous_results_20250919_114947.json
scripts/: create_cd4_shap_slide_svg.py  create_cd4_shap_with_vulnerability_breakdown.py  create_scenario_b_full_dataset.py  create_visualization_panel.py  exploratory_shap_analysis.py  multi_model_two_scenario_comparison.py
src/: __init__.py
src/enbel_pp/: __init__.py  (+7 more)
tests/: __init__.py  conftest.py  test_config.py  test_ml_pipeline.py
utils/: __init__.py
(+224 files in other folders)
